<?xml version="1.0"?>
<package format="2">
    <name>time</name>
    <version>2.0.0</version>
    <description>a crummy time implementation.</description>
    <maintainer email="geoffrey.viola@asirobots.com">Geoffrey Viola</maintainer>
    <license>ASI Version 1.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>rmw_implementation</build_depend>
    <build_depend>rmw_implementation_cmake</build_depend>
    <build_depend>builtin_interfaces</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rmw_implementation</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>

    <test_depend>ament_cmake_gmock</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_nose</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_cpplint</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>

    <test_depend>launch</test_depend>
    <test_depend>launch_testing</test_depend>
    <test_depend>rclcpp</test_depend>
    <test_depend>rmw_implementation</test_depend>
    <test_depend>rosidl_default_generators</test_depend>
    <test_depend>rosidl_default_runtime</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
